samples/_failures_safe/1761275396_65d3f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75aa25c2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_75aa25c2.c:170:27: error: expected ‘]’ at end of input
  170 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_75aa25c2.c:170:9: error: expected declaration or statement at end of input
  170 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_75aa25c2.c:170:9: error: expected declaration or statement at end of input
